# cell-sensei

./: .gitignore  README.md  ROADMAP.md  app.py  config.py  pyproject.toml  requirements.txt
assignment_defs/: example_tests.yaml  test_calculate_average.py  weatherwise_tests.py
celery_worker/: celeryconfig.py
docs/: feedback-schema.json
docs/adr/: 000-python-dev-tooling.md  001-project-name-selection.md  002-choice-of-web-framework.md  003-asynchronous-task-processing.md  004-sandboxing-strategy.md  005-static-analysis-approach.md  006-iterative-development-strategy.md  007-feedback-report-format-and-delivery.md  adr-template.md
scripts/: run_firejail_test.sh  scaffold_cellsensi.py
sensei_core/: notebook_parser.py  static_analyzer.py  test_runner.py
test_harness_actual/: harness.py
web_ui/: components.py  routes.py
